docs/index.css
html {
	display: flex;
	justify-content: center;
	height: 100%;
	width: 100%;
	background-color: rgba(23,20,33,255);
  	font-family: "Consolas", "SF Mono", "Menlo", "Liberation Mono", "Courier New", monospace;
	color: white;
}

nav {
	display: flex;
	justify-content: center;
	padding: 10px;
	gap: 10px;
}

main {
	max-width: 900px;
	width: 100%;
	margin: 20px 0;
	padding: 20px;
	box-sizing: border-box; /* Ensures padding is included in height/width calculation */

	display: flex;
	flex-direction: column;
    justify-content: center;
}

figure {
	margin: 0;
	padding: 10px
}

figcaption {
	text-align: center;
	font-size: 12px;
	font-style: italic;
	opacity: 0.65;
	color: rgb(200, 195, 188);
}

a {
	text-decoration: none; /* Remove underline */
	outline: none;
}

.terminal-link {
	color: rgba(42, 161, 179, 1);
	transition: color border-bottom; 
    border-bottom: 2px solid transparent; /* Add transparent underline */
}

.terminal-link:hover {
	color: rgba(18, 72, 139, 1);
	border-bottom: 2px solid rgba(18, 72, 139, 1); /* Underline effect on hover */
}

.terminal-link:active {
	color: rgba(18, 72, 139, 1);
}

.terminal-link:visited {
	color: rgba(18, 72, 139, 1);
}

.tmux-link {
	color: rgba(23,24,35,255);
	transition: color;
}

.tmux-link:hover {
	color: rgba(208, 207, 204, 1);
}


/* ANIMATION FOR PHOTO */
/* Keyframes for twisting animation */
@keyframes twist {
	0% {
		transform: rotate(0deg);
	}
	25% {
		transform: rotate(-5deg);
	}
	50% {
		transform: rotate(5deg);
	}
	75% {
		transform: rotate(-5deg);
	}
	100% {
		transform: rotate(0deg);
	}
}

/* Style class for the image */
.twist-on-hover {
	display: inline-block;
	transition: transform 0.3s ease-in-out;
}

.twist-on-hover:hover {
	animation: twist 0.6s ease-in-out;
}

.container {
	display: flex;
	flex-wrap: wrap;
	align-items: center;
	justify-content: center;
	margin: 20px;
}

.image {
	flex: 1 1 40%;
	max-width: 200px;
	padding: 10px;
}

.image img {
	width: 100%;
	height: auto;
	border-radius: 8px;
}

.text {
	flex: 1 1 50%;
}

.terminal-content {
	padding: 20px;
}

.terminal-text {
	margin: 0px;
}

.terminal-user {
	color: rgba(38,162,105,255) ;
}

.terminal-directory {
	color: rgba(18,72,139,255);
}

.terminal-tmux {
	background-color: rgba(38,162,105,255);
	color: rgba(23,20,33,255);
}

@media (max-width: 768px) {
	.container {
		flex-direction: column;
	}

	.image, .text {
		flex: 1 1 100%;
		max-width: 100%;
	}
}

.figlet-title {
  	font-family: "SF Mono", "Menlo", "Consolas", "Liberation Mono", "Courier New", monospace;
	font-size: 9px;
	width: fit-content;
	margin: 0;
}

.photo {
	width: 100%;
	height: auto; /* Maintain aspect ratio */
	max-width: 100%; /* Prevent image from exceeding parent width */
	display: block; /* Removes default inline spacing */
}

.photo-grid {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
  gap: 16px; /* Adjust gap between items */
  padding: 16px; /* Add padding around the grid */
  justify-items: center; /* Center items horizontally */
  align-items: center; /* Center items vertically */
}.

